2018-XX-XX: 3.4.7

	Bugfixes:

	all : fixed a compilation failure if output directory starts with a slash (#6844)
	display : fixed completion in import.hx files (#6022)
	php : fixed List.pop() for sequential pops (#6859)

2018-02-12: 3.4.6

	Bugfixes:

	all : fixed a bug when Haxe compiler couldn't find std lib on Linux if executed by another program
	all : fixed "Unix.Unix_error" compiler failure if output directory contains a trailing slash (#6212, #6768)
	php7 : fixed an issue with "Object" used as a class name for PHP 7.2 (it's a new keyword in php) (#6838)
	as3 : fixed "inifinite recursion" compiler error for classes named "Object"

2018-01-31: 3.4.5

	General improvements and optimizations:

	dce : optimized DCE performance (#6181)

	Bugfixes:

	dce : don't remove constructor if any instance field is kept (#6062)
	js : fixed saving setter to `tmp` var before invocation (#6672)
	php7 : don't fail on generating import aliases for classes with the similar names (#6680)
	php7 : fixed appending "sqlite:" prefix to the names of files created by `sys.db.Sqlite.open()` (#6692)
	php7 : made php.Lib.objectOfAssociativeArray() recursive (#6698)
	php7 : fixed php error on parsing expressions like `a == b == c` (#6720)
	php/php7 : fixed `sys.net.Socket.bind()` (#6693)

2017-10-08: 3.4.4

	Bugfixes:

	flash : fixed flash target broken when compiled with OCaml 4.05 (#6589)
	php7 : fixed accessing `static inline var` via reflection (#6630)
	js : fixed js syntax error for `value.iterator--` (#6637)
	cpp : fixed evaluation order problem when constructing enums (#6643)

2017-09-10: 3.4.3

	Bugfixes:

	all : fixed DCE issue with interface fields (#6502)
	cpp : fixed return typing for embedded closures (#6121)
	php7: fixed `@:enum abstract` generation  without `-dce full` (#6175)
	php7: fixed using enum constructor with arguments as a call argument (#6177)
	php7: fixed accessing methods on dynamic values (#6211)
	php7: fixed `null` property access (#6281)