@@ -3,6 +3,7 @@
 	Bugfixes:
 
 	all : fixed a compilation failure if output directory starts with a slash (#6844)
+	all : fixed autogenerated constructor for extending @:structInit classes (#6822, #6078)
 	display : fixed completion in import.hx files (#6022)
 	php : fixed List.pop() for sequential pops (#6859)
 
